# atlas-ai-os

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
apps/api/: README.md  pyproject.toml
apps/api/atlas_api/: __init__.py  main.py  schemas.py
apps/api/atlas_api/api/: router.py
apps/api/atlas_api/api/routes/: actions.py  approvals.py  chat.py  code.py  dashboard.py  decisions.py  demo.py  evals.py  growth.py  health.py  journal.py  knowledge.py  labs.py  memory.py  plugins.py  privacy.py  profile.py  projects.py  providers.py  resume.py  retrieval.py  self_eval.py  simulator.py  traces.py  workflows.py
apps/api/atlas_api/core/: __init__.py  config.py  errors.py  logging.py
apps/api/atlas_api/db/: models.py  session.py
apps/api/atlas_api/services/: action_service.py  chunking.py  code_intelligence.py  code_service.py  demo_service.py  embeddings.py  fixtures.py  growth_service.py  labs_service.py  llm.py  memory_service.py  privacy_service.py  provider_health.py  resume_parser.py  store.py  store_shared.py  tiny_database.py  trace_service.py  workflow_service.py
apps/api/tests/: conftest.py  test_code_actions_evals.py  test_health.py  test_labs_and_tiny_database.py  test_privacy_graph_growth_simulator_plugins.py  test_profile_memory_resume_chat.py  test_providers_and_demo_flow.py
docker/: api.Dockerfile  web.Dockerfile
docs/: 100-iteration-sprint.md  architecture.md  demo-video-script.md  engineering-debt.md  evaluation-strategy.md  index.html  mvp-scope.md  product-spec.md  sample-data.md  (+2 more)
(+46 files in other folders)
